fix test case failure

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           let name = document.getElementById("userName").value;
           let password = document.getElementById("passWord").value;
         //   console.log(name, password);
-            if(!(name === "username") || !(password === "password")) {
+            if(!(name === "user") || !(password === "password")) {
                 warning.textContent = "Invalid username or password";
             } else {
                 form.style.display = "none";
